--- a/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
+++ b/translations/kangyur/translations/101-146_toh1090,1777-in_praise_of_the_mistress_of_disease.xml
@@ -24,7 +24,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-101-146-286">Nathaniel Rich</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.1.10 <date>2023</date>
+                <edition>v 1.1.11 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -214,6 +214,9 @@
                     <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
                 </change>
                 <change who="#martina-cotter" when="2023-11-13T19:06:27.128Z" type="text-version" status="1.1.10" xml:id="UT22084-101-146-337">
+                    <desc>added new definitions.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-13T19:23:40.665Z" type="text-version" status="1.1.11" xml:id="UT22084-101-146-338">
                     <desc>added new definitions.</desc>
                 </change>
             </revisionDesc>
@@ -717,8 +720,8 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">’dod khams dbang phyug ma</term>
                             <term xml:lang="bo" type="attestedSource" n="1">འདོད་ཁམས་དབང་ཕྱུག་མ།</term>
                             <note type="definition">
-                                <p>Here an epithet of Śrīdevī Mahākālī. According
-                                    to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title> (<ref rend="hidden" target="http://read.84000.co/translation/toh842.html">Toh 842</ref>),
+                                <p>An epithet for Śrīdevī Mahākālī. According
+                                    to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842),
                                     Śrīdevī Mahākālī prays that in her next life she
                                     may meet the Buddha and become the sovereign
                                     goddess of the desire realm. When this becomes
@@ -813,7 +816,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nag mo</term>
                             <term xml:lang="bo" type="attestedSource" n="1">ནག་མོ།</term>
                             <note type="definition">
-                                <p>Here an epithet of Śrīdevī Mahākālī.</p>
+                                <p>Here an epithet for Śrīdevī Mahākālī.</p>
                             </note>
                         </gloss>
                     </item>
@@ -995,7 +998,7 @@
                         <term xml:lang="Sa-Ltn" status="verified"/>
                         <note type="definition">
                                 <p>An epithet for Śrīdevī Mahākālī. According
-                            to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title> (<ref rend="hidden" target="http://read.84000.co/translation/toh842.html">Toh 842</ref>),
+                            to <title xml:lang="en">The Tantra of the Flaming Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842),
                             Śrīdevī Mahākālī was at one point tricked into
                             marriage with the rākṣasa king Daśagrīva and so
                             becomes known as “Wife of the Demon.”</p>
@@ -1009,9 +1012,8 @@
                         <term xml:lang="bo" n="1">གཤིན་རྗེའི་ལྕམ་མོ།</term>
                         <term xml:lang="Sa-Ltn" status="verified"/>
                         <note type="definition">
-                                <p>An epithet for Devī
-                            Mahākālī. According to <title xml:lang="en">The Tantra of the Flaming
-                                Ḍākinī</title> (<ref rend="hidden" target="http://read.84000.co/translation/toh842.html">Toh 842</ref>), Śrīdevī Mahākālī was originally
+                                <p>An epithet for Śrīdevī Mahākālī. According to <title xml:lang="en">The Tantra of the Flaming
+                                Ḍākinī</title> (<ref rend="pending" target="http://read.84000.co/translation/toh842.html"/>Toh 842), Śrīdevī Mahākālī was originally
                             born as a divine girl called Red Cāmuṇḍī. Her
                             father was Mahādeva, her mother was Umadevī, and
                             her brother at that time was called Yama Mahākāla.
