--- a/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
@@ -4,28 +4,25 @@
   <teiHeader>
     <fileDesc>
       <titleStmt>
-        <title type="mainTitle" xml:lang="Bo-Ltn">tshogs bdag kyi rgyud</title>
-        <title type="mainTitle" xml:lang="bo">ཚོགས་བདག་ཀྱི་རྒྱུད།</title>
-        <title type="mainTitle" xml:lang="en">The Gaṇapati Tantra</title>
-        <title type="mainTitle" xml:lang="Sa-Ltn">Gaṇapatitantra</title>
-        <title type="longTitle" xml:lang="bo">ཚོགས་ཀྱི་བདག་པོ་ཆེན་པོའི་རྒྱུད།</title>
-        <title type="longTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po’i rgyud</title>
-        <title type="longTitle" xml:lang="en">The Tantra of Great Gaṇapati</title>
-        <title type="longTitle" xml:lang="Sa-Ltn">Mahā­gaṇa­pati­tantra</title>
-        <title type="otherTitle" xml:lang="zh"/>
-        <author xml:id="UT22084-091-063-1" role="translatorMain">Translated by the Dharmachakra
+        <title type="mainTitle" xml:lang="en">The Tantra of Great Gaṇapati</title>
+        <title type="mainTitle" xml:lang="Sa-Ltn">Mahā­gaṇa­pati­tantra</title>
+        <title type="mainTitle" xml:lang="bo">ཚོགས་ཀྱི་བདག་པོ་ཆེན་པོའི་རྒྱུད།</title>
+        <title type="mainTitle" xml:lang="Bo-Ltn">tshogs kyi bdag po chen po’i rgyud</title>
+                <author role="translatorMain" xml:id="UT22084-091-063-1">Translated by the Dharmachakra
           Translation Committee<lb/>under the patronage and supervision of 84000: Translating the
           Words of the Buddha</author>
-        <consultant role="projectManager" xml:id="UT22084-091-063-2">Andreas Doctor</consultant>
-        <author role="translatorEng" xml:id="UT22084-091-063-3">Adam Krug</author>
-        <editor role="reviser" xml:id="UT22084-091-063-4">Ryan Conlon</editor>
-        <editor role="associateEditor" xml:id="UT22084-091-063-5">George FitzHerbert</editor>
-        <editor role="copyEditor" xml:id="UT22084-091-063-6">Dawn Collins</editor>
-        <editor role="projectEditor" xml:id="UT22084-091-063-28">David Fiordalis</editor>
-        <editor role="TEImarkupEditor" xml:id="UT22084-091-063-41">Martina Cotter</editor>
-      </titleStmt>
+                <consultant role="projectManager" xml:id="UT22084-091-063-2">Andreas Doctor</consultant>
+                <author role="translatorEng" xml:id="UT22084-091-063-3">Adam C. Krug</author>
+                <editor role="reviser" xml:id="UT22084-091-063-4">Ryan Conlon</editor>
+                <editor role="associateEditor" xml:id="UT22084-091-063-5">George FitzHerbert</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-063-6">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-091-063-28">David Fiordalis</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-091-063-41">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-091-063-402">Andreas Doctor</editor>
+                <consultant role="dharmaMaster" xml:id="UT22084-091-063-403">Chokyi Nyima Rinpoche</consultant>
+            </titleStmt>
       <editionStmt>
-                <edition>v 0.0.2 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -33,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="2">
+        <availability status="1.a">
           <p type="tantricRestriction">
                         <emph rend="bold">Warning:</emph> Readers are reminded that
             according to Vajrayāna Buddhist tradition there are restrictions and commitments
@@ -52,7 +49,7 @@
         <idno xml:id="UT22084-091-063"/>
         <note>An early mistake in the assigning of UT numbers within the 84000 project means that
           these ids diverge slightly from the standard logic.</note>
-        <date>2023-09-07</date>
+        <date>2023-11-14</date>
       </publicationStmt>
       <sourceDesc>
         <bibl key="toh666" type="text">
@@ -138,6 +135,15 @@
                 <change who="#line-tofte" when="2023-10-27T07:55:16.82Z" type="text-version" status="0.0.2" xml:id="UT22084-091-063-393">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2023-10-31T08:27:29.059Z" type="text-version" status="0.0.3" xml:id="UT22084-091-063-404">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-14T12:31:36.672Z" type="translation-status" status="1.a" xml:id="UT22084-091-063-405">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-14T12:31:36.672Z" type="text-version" status="1.0.0" xml:id="UT22084-091-063-406">
+                    <desc>First published version</desc>
+                </change>
       </revisionDesc>
     </fileDesc>
   </teiHeader>
@@ -219,13 +225,11 @@
               important Buddhist archeological site, see Pia Brancaccio 2011.</note> The level of
             Buddhist participation in the Gaṇapati cult in India requires more research, but it is
             supported by the existence of Gaṇapati shrines such as the one found at the Aurangabad
-            cave complex. Both works devoted to this deity in the Tibetan Kangyurs—<title xml:lang="en">The Tantra of Great Gaṇapati </title>and <title xml:lang="en">Gaṇapati’s
-              Heart Mantra</title>
-                        <ref inst="untoggle the following comment" rend="pending" target="https://read.84000.co/translation/toh665.html"/>
-            <!--<note xml:id="" place="end">Dharmachakra Translation Committee, trans., <title xml:lang="en"><ref rend="pending" target="https://read.84000.co/translation/toh665.html">Gaṇapati’s Heart Mantra</ref></title>, Toh 665/Toh 1084 (84000: Translating the Words of the Buddha, 2023).</note>-->
+            cave complex. Both works devoted to this deity in the Tibetan Kangyurs—<title xml:lang="en">The Tantra of Great Gaṇapati</title> (Toh 666) and <title xml:lang="en">The Heart Mantra of Gaṇapati</title> (Toh 665)<ref inst="untoggle the following comment" rend="pending" target="https://read.84000.co/translation/toh665.html"/>
+            <!--<note xml:id="" place="end">Dharmachakra Translation Committee, trans., <title xml:lang="en"><ref rend="pending" target="https://read.84000.co/translation/toh665.html">The Heart Mantra of Gaṇapati</ref></title>, Toh 665/Toh 1084 (84000: Translating the Words of the Buddha, 2023).</note>-->
             —provide additional textual evidence of his importance to Indian Buddhist traditions. </p>
           <milestone unit="chunk" xml:id="UT22084-091-063-52"/>
-          <p tid="12">While <title xml:lang="en">Gaṇapati’s Heart Mantra</title> appears in the
+          <p tid="12">While <title xml:lang="en">The Heart Mantra of Gaṇapati</title> appears in the
               Phangthangma<note place="end" xml:id="UT22084-091-063-53">
               <title xml:lang="Bo-Ltn">dkar chag ’phang thang ma</title> (Pe cin: mi rigs dpe skrun
               khang, 2003), p. 30. </note> and Denkarma<note place="end" xml:id="UT22084-091-063-54"> Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar gyi chos kyi ’gyur
@@ -233,7 +237,7 @@
               folio 303.a. See also Shyuki Yoshimuri 1950, p. 154.</note> royal catalogs of Tibetan
             translations under the abridged title <title xml:lang="Bo-Ltn">’phags pa tshogs kyi
               snying po</title>, neither of these catalogs contains any mention of <title xml:lang="en">The Tantra of Great Gaṇapati</title>. <title xml:lang="en">The Tantra of
-              Great Gaṇapati </title>also does not<title xml:lang="en"> </title>appear to be
+              Great Gaṇapati </title>also does not appear to be
             included among the various works on Gaṇapati that were incorporated into the compendia
             of dhāraṇīs translated into Chinese from the seventh century.<note place="end" xml:id="UT22084-091-063-55"> This is based on Duquenne’s analysis of these materials.
               See Robert Duquenne 1988, pp. 321–54.</note>
@@ -260,25 +264,7 @@
               <emph>from India</emph> (<foreign xml:lang="Bo-Ltn" type="quote">rgya gar yul
               nas</foreign>) appears to be some form of response to the text’s contested status, as
             noted by Bütön, and to justify including it in the Kangyur as an authentically Indic
-            work. Some material in <title xml:lang="en">The Tantra of Great Gaṇapati </title>itself,
-            however, such as the reference to a “soul stone” (<foreign xml:lang="Bo-Ltn" type="term">bla rdo</foreign>) in chapter fourteen, and perhaps the spelling <foreign xml:lang="Sa-Ltn" type="term">bhairabhe </foreign>(for the Sanskrit *<foreign xml:lang="Sa-Ltn" type="term">bhairave</foreign>) in the sections presenting
-            Gaṇapati’s mantra, may suggest Tibetan, or, in the latter case, Nepalese influence.<note place="end" xml:id="UT22084-091-063-61"> The term <foreign xml:lang="Bo-Ltn" type="term">bla rdo</foreign> may also be an idiomatic translation of the Sanskrit
-                <foreign xml:lang="Sa-Ltn" type="term">liṅga</foreign>. This is supported by
-              evidence in the eight-chapter <title xml:lang="Sa-Ltn">Mahākālatantra</title> (Toh.
-              667) <ref inst="untoggle the following comment" rend="pending" target="https://read.84000.co/translation/toh667.html"/>
-              <!--<note xml:id="" place="end">Dharmachakra Translation Committee, trans., <title xml:lang="en"><ref rend="pending" target="https://read.84000.co/translation/toh667.html">The Mahākāla Tantra</ref></title>, Toh 667 (84000: Translating the Words of the Buddha, 2023).</note>-->
-              where the deity Mahākāla offers his liṅga (<foreign xml:lang="Bo-Ltn" type="quote">rtags</foreign>), which is described there as “the essence of his life force”
-                (<foreign xml:lang="Bo-Ltn" type="quote">srog gi snying po</foreign>) to show his
-              subservience to the deity Hayagrīva. The term <foreign xml:lang="Bo-Ltn" type="term">bla rto</foreign> also appears in the eight-chapter <title xml:lang="Sa-Ltn">Mahākālatantra</title> four times, appearing to have a similar function as this use
-              of the word <foreign xml:lang="Sa-Ltn" type="term">liṅga</foreign> to signify a kind
-              of “essence of the life force” that can be installed in a ritual implement or maṇḍala,
-              or even worn on one’s own body.</note> It is also curious that this colophon verse
-            mentions Atiśa Dīpaṁkaraśrījñāna “entrusting”<emph> </emph>this work to his disciple
-            Dromtön Gyalwé Jungné but contains no mention of Atiśa, Dromtön, or anyone else
-            performing tasks such as translating, editing, or finalizing the text. Thus, all that we
-            can determine with any certainty at this time is that <title xml:lang="en">The Tantra of
-              Great Gaṇapati</title> was most likely introduced to Tibet by Atiśa sometime in the
-            mid-eleventh century. </p>
+            work.</p>
           <milestone unit="chunk" xml:id="UT22084-091-063-62"/>
           <p tid="17">This translation is based on the version of <title xml:lang="en">The Tantra of
               Great Gaṇapati</title> that appears in the “Tantra Collection” (<foreign xml:lang="Bo-Ltn" type="term">rgyud ’bum</foreign>) of the Degé Kangyur, in
@@ -294,7 +280,7 @@
     <body>
       <div type="translation">
         <head type="translation"> The Translation </head>
-        <head type="titleMain" tid="195">The Gaṇapati Tantra</head>
+        <head type="titleMain" tid="195">The Tantra of Great Gaṇapati</head>
         <div type="section" xml:id="UT22084-091-063-section-1">
           <milestone unit="chunk" xml:id="UT22084-091-063-66"/>
           <p tid="23">
@@ -329,7 +315,7 @@
               <l>The nāgas will also obey one’s commands</l>
               <l>And accomplish any task like servants.</l>
               <l>The pleasure one will experience will be</l>
-              <l>Greater than the pleasures of the god realms.<note place="end" xml:id="UT22084-091-063-73"> Following D and S: <foreign xml:lang="Bo-Ltn" type="quote">lha yi longs spyod mnga’ ris las/ /’dod pa’i longs spyod ’byung bar
+              <l>Greater than the pleasures of the god realms.<note place="end" xml:id="UT22084-091-063-73"> Following D and S: <foreign xml:lang="Bo-Ltn" type="quote">lha yi longs spyod mnga’ ris las /’dod pa’i longs spyod ’byung bar
                     ’gyur</foreign>. This translation is tentative. </note>
               </l>
             </lg>
