--- a/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
+++ b/translations/kangyur/translations/091-062_toh665,1084-the_essence_of_ganapati.xml
@@ -30,7 +30,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-091-062-167">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -181,6 +181,9 @@
                 <change who="#martina-cotter" when="2023-11-14T12:28:50.897Z" type="text-version" status="1.0.0" xml:id="UT22084-091-062-170">
                     <desc>First published version</desc>
                 </change>
+                <change who="#martina-cotter" when="2023-11-14T13:45:28.247Z" type="text-version" status="1.0.1" xml:id="UT22084-091-062-171">
+                    <desc>updated glossary.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -314,8 +317,7 @@
                                                 all their endeavors will succeed.<note place="end" xml:id="UT22084-091-062-76"> This translation of
                                                   the phrase <foreign xml:lang="Bo-Ltn" type="quote">las thams cad </foreign>has been left broad
                                                   enough here to include any activity, but in most
-                                                  cases this statement primarily refers to <foreign xml:lang="Bo-Ltn" type="term">las</foreign> /
-                                                  <foreign xml:lang="Sa-Ltn" type="term">karma</foreign> in its more technical sense as
+                                                  cases this statement primarily refers to <foreign xml:lang="Bo-Ltn" type="term">las</foreign>/<foreign xml:lang="Sa-Ltn" type="term">karma</foreign> in its more technical sense as
                                                   “ritual action.” </note> By upholding it, they
                                                 will accomplish their goal and all their mantras
                                                 will be effective. </p>
@@ -340,8 +342,8 @@
                                                   gṛhṇa gṛhṇa dhāva dhāva bhañja bhañja stambha
                                                   stambha jambha jambha moha moha dehi dehi dāpaya
                                                   dāpaya dhādhānyaṃ siddhiṃ me prayaccha | |
-                                                </mantra>
-                        <ref cRef="F.193.a" type="folio" key="toh665" xml:id="UT22084-091-062-154"/> <mantra xml:lang="Sa-Ltn">samayam anusmara mahārudravacanīye svāhā
+                                        </mantra>
+                        <ref cRef="F.193.a" type="folio" key="toh665" xml:id="UT22084-091-062-154"/> <mantra xml:lang="Sa-Ltn">samayam anusmara mahārudravacanīye svāhā |
                                                 </mantra>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-062-80"/>
