--- a/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
@@ -22,7 +22,7 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-091-063-403">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -143,6 +143,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-14T12:31:36.672Z" type="text-version" status="1.0.0" xml:id="UT22084-091-063-406">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-14T13:46:29.297Z" type="text-version" status="1.0.1" xml:id="UT22084-091-063-407">
+                    <desc>Updated typo.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -2216,7 +2219,8 @@
               <term xml:lang="Bo-Ltn" status="verified" n="1">dI paM ka ra shrI dz+nyA nas </term>
               <term xml:lang="bo" n="1">དཱི་པཾ་ཀ་ར་ཤྲཱི་ཛྙཱ་ནས།</term>
               <term xml:lang="Sa-Ltn" status="verified" type="reconstructedPhonetic">dīpaṁkara­śrījñāna</term>
-              <term type="translationAlternative">Atiśa; Atiśa Dīpaṁkaraśrījñāna</term>
+              <term type="translationAlternative">Atiśa</term>
+            <term type="translationAlternative">Atiśa Dīpaṁkaraśrījñāna</term>
             </gloss>
                     </item>
           <item>
