--- a/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
+++ b/translations/kangyur/translations/091-063_toh666-the_tantra_of_ganapati.xml
@@ -22,7 +22,7 @@
                 <consultant role="dharmaMaster" xml:id="UT22084-091-063-403">Chokyi Nyima Rinpoche</consultant>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -146,6 +146,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-14T13:46:29.297Z" type="text-version" status="1.0.1" xml:id="UT22084-091-063-407">
                     <desc>Updated typo.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-14T13:53:49.686Z" type="text-version" status="1.0.2" xml:id="UT22084-091-063-408">
+                    <desc>updated glossary.</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
@@ -2307,7 +2310,8 @@
                                 <p>Dromtön Gyalwé Jungné (1004/5–1064) was one of Atiśa’s
                   Tibetan disciples and a founding patriarch of the Kadampa school.</p>
                             </note>
-              <term type="translationAlternative">Dromtön; Dromtön Gyalwé Jungné</term>
+              <term type="translationAlternative">Dromtön</term>
+            <term type="translationAlternative">Dromtön Gyalwé Jungné</term>
             </gloss>
                     </item>
           <item>
