--- a/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
+++ b/translations/kangyur/placeholders/043-012_toh75-the_sutra_of_gangottaras_questions.xml
@@ -13,14 +13,15 @@
                 <author role="translatorEng" xml:id="UT22084-043-012-2">Sophie McGrath</author>
                 <editor role="projectEditor" xml:id="UT22084-043-012-3">David Fiordalis</editor>
                 <editor role="copyEditor" xml:id="UT22084-043-012-24">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-043-012-34">Rory Lindsay</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.14 <date>2023</date>
+                <edition>v 0.0.16 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-043-012"/>
                 <date/>
             </publicationStmt>
@@ -101,6 +102,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-16T08:38:24.328Z" type="text-version" status="0.0.14" xml:id="UT22084-043-012-29">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T11:13:07.069Z" type="text-version" status="0.0.15" xml:id="UT22084-043-012-35">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T08:38:05.119Z" type="translation-status" status="2.b" xml:id="UT22084-043-012-36">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T08:38:05.119Z" type="text-version" status="0.0.16" xml:id="UT22084-043-012-37">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
