--- a/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
+++ b/translations/kangyur/placeholders/063-005_toh224-the_sutra_of_the_chapter_about_sthiradhyasa__drdhadhyasaya.xml
@@ -5,21 +5,21 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Chapter about Sthīrādhyāśa / Dṛdhādhyāśaya</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">sthīrādhyāśaya­parivartasūtra / dṛdhādhyāśaya­parivartasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Sthīrādhyāśaya­parivartasūtra / dṛdhādhyāśaya­parivartasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">lhag bsam brtan pa'i le'u'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśaya­parivarta­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśayaparivartanāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśaya­parivarta­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryasthīrādhyāśaya­parivarta­nāmamahāyānasūtra / āryadṛdhādhyāśayaparivartanāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa lhag pa'i bsam pa brtan pa'i le'u zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-063-005-1"/>
                 <author role="translatorEng" xml:id="UT22084-063-005-2">Sophie McGrath</author>
                 <editor role="reviser" xml:id="UT22084-063-005-3">Laura Goetz</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-063-005"/>
                 <date/>
             </publicationStmt>
@@ -58,6 +58,12 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-06T11:19:10.858Z" type="text-version" status="0.0.6" xml:id="UT22084-063-005-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T08:55:14.51Z" type="translation-status" status="2.f" xml:id="UT22084-063-005-12">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T08:55:14.51Z" type="text-version" status="0.0.7" xml:id="UT22084-063-005-13">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
