--- a/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
+++ b/translations/kangyur/placeholders/043-013_toh76-the_sutra_of_asokadattas_prophecy.xml
@@ -5,10 +5,10 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of Aśokadatta's Prophecy</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">aśokadattavyākaraṇasūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Aśokadattavyākaraṇasūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">mya ngan med kyis byin pa lung bstan pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">ārya aśokadattavyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryāśokadattavyākaraṇa­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Ārya aśokadattavyākaraṇa­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa mya ngan med kyis byin pa lung bstan pa zhes bya ba theg pa chen po'i mdo</title>
                 <author role="translatorMain" xml:id="UT22084-043-013-1">UCSB Buddhist Studies Translation Group</author>
                 <author role="translatorEng" xml:id="UT22084-043-013-2">ErdeneBaatar Erdene-Ochir</author>
@@ -18,11 +18,11 @@
                 <editor role="copyEditor" xml:id="UT22084-043-013-24">Laura Goetz</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.11 <date>2023</date>
+                <edition>v 0.0.12 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.d"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-043-013"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +85,12 @@
                     <desc>2.d</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-13T10:58:01.655Z" type="text-version" status="0.0.11" xml:id="UT22084-043-013-27">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T14:42:20.786Z" type="translation-status" status="2.c" xml:id="UT22084-043-013-28">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-15T14:42:20.786Z" type="text-version" status="0.0.12" xml:id="UT22084-043-013-29">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
