--- a/translations/kangyur/translations/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
+++ b/translations/kangyur/translations/100-047_toh891-the_incantation_of_sarvanivaranaviskambhin.xml
@@ -25,7 +25,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-100-047-82">Nathaniel Rich</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.1.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -159,6 +159,9 @@
                 <change who="#martina-cotter" when="2023-11-03T19:05:20.601Z" type="text-version" status="1.0.1" xml:id="UT22084-100-047-87">
                     <desc>update to homage layout.</desc>
                 </change>
+                <change who="#john" when="2023-11-16T11:39:55.304Z" type="text-version" status="1.1.1" xml:id="UT22084-100-047-88">
+                    <desc>First prose line of the translation changed (in consultation with Catherine).</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
         </teiHeader>
@@ -281,15 +284,16 @@
                 <body>
                         <div type="translation">
                                 <head type="translation"> The Translation </head>
-                                <head type="titleMain" tid="17">The Noble Dhāraṇī of
+                                <head type="titleHon" tid="42">The Noble</head>
+                                <head type="titleMain" tid="43">Dhāraṇī of
                                         Āvaraṇaviṣkambhin</head>
-                                <div type="section" xml:id="UT22084-100-047-section-1">
+                <div type="section" xml:id="UT22084-100-047-section-1">
                                         <milestone unit="chunk" xml:id="UT22084-100-047-15"/>
                                         <p tid="21">
                         <ref cRef="F.166.a" type="folio" xml:id="UT22084-100-047-45"/> Homage to the Buddha.<lb/>Homage to the Dharma.<lb/>Homage to the Sangha.</p>
                                         <lb/>
-                                        <p tid="26">Having begun with this homage, the dhāraṇī of
-                                                noble Āvaraṇaviṣkambhin shall be presented. </p>
+                                        <p tid="26">Beginning with these lines of homage, the dhāraṇī of
+                                                noble Āvaraṇaviṣkambhin should be recited as follows. </p>
                                         <milestone unit="chunk" xml:id="UT22084-100-047-21"/>
                                         <p tid="27">If one recites this essence of the blessed,
                                                 thus-gone, worthy, perfect Buddha Āvaraṇaviṣkambhin
