--- a/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
+++ b/translations/kangyur/placeholders/059-013_toh170-the_sutra_of_the_questions_of_the_brahmani_srimati.xml
@@ -18,11 +18,11 @@
                 <editor role="projectEditor" xml:id="UT22084-059-013-43">Rory Lindsay</editor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.16 <date>2023</date>
+                <edition>v 0.0.17 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-059-013"/>
                 <date/>
             </publicationStmt>
@@ -115,6 +115,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2023-11-06T15:32:41.933Z" type="text-version" status="0.0.16" xml:id="UT22084-059-013-46">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-17T09:33:40.79Z" type="translation-status" status="2.a" xml:id="UT22084-059-013-47">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-17T09:33:40.79Z" type="text-version" status="0.0.17" xml:id="UT22084-059-013-48">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
